@@ -1,16 +1,32 @@
 import WasmCrossProject.*
 import WithKyoTest._
 import com.github.sbt.git.SbtGit.GitKeys.useConsoleForROGit
+import kyo.build.ScalacOption
+import kyo.build.ScalacOptions
+import kyo.build.ScalaVersion
 import org.scalajs.jsenv.nodejs.*
-import org.typelevel.scalacoptions.ScalacOption
-import org.typelevel.scalacoptions.ScalacOptions
-import org.typelevel.scalacoptions.ScalaVersion
 import sbtdynver.DynVerPlugin.autoImport.*
 import scala.scalanative.build.NativeConfig
 
 val scala3Version    = "3.8.4"
 val scala3LTSVersion = "3.3.8"
 val scala213Version  = "2.13.18"
+
+// Scaladoc runs from a newer release than the compiler that produced the code. It reads TASTy, and
+// TASTy is backward compatible, so the tool version moves independently of `scala3Version`. This one
+// carries scala/scala3#25779, without which rendering a method signature can fail with a null
+// SignatureBuilder.content on Linux x86_64 and abort the publish.
+val scaladocVersion = "3.9.0-RC4"
+
+// The scaladoc release used for a module: the fixed one for the current series, the module's own
+// everywhere else. Only the current series can read what the fixed tool carries.
+val scaladocToolVersion = Def.setting {
+    if (scalaVersion.value == scala3Version) scaladocVersion else scalaVersion.value
+}
+
+// Holds the scaladoc tool and its dependencies. Hidden so it stays out of published poms, and
+// separate from the compile classpath so the tool's own Scala version never reaches user code.
+lazy val ScaladocTool = config("scaladocTool").hide
 
 val zioVersion       = "2.1.26"
 val catsVersion      = "3.7.0"
@@ -27,7 +43,7 @@ val compilerOptions = Set(
     ScalacOptions.warnValueDiscard,
     ScalacOptions.warnNonUnitStatement,
     ScalacOptions.languageStrictEquality,
-    ScalacOptions.release("17"),
+    ScalacOptions.release("25"),
     ScalacOptions.advancedKindProjector
 )
 
@@ -55,13 +71,10 @@ ThisBuild / useConsoleForROGit := (baseDirectory.value / ".git").isFile
 Global / commands += Repeat.command
 Global / commands += TestKyo.command
 
-// Serialize scaladoc generation. Scala 3 dottydoc runs in-process (the `doc` task is not
-// forked) and is not safe to run concurrently within one sbt JVM: parallel per-module `doc`
-// runs intermittently corrupt shared compiler state and crash with a null
-// SignatureBuilder.content() NPE while rendering method signatures. That surfaced as flaky
-// `ci-release` failures on main (the per-module Native javadoc step). Every project tags its
-// `Compile / doc` with DocTag (see kyo-settings) and concurrentRestrictions caps it at 1, so
-// docs build one module at a time while compilation and tests stay parallel.
+// Cap concurrent scaladoc runs. Each one is a forked JVM holding a whole module's TASTy graph
+// (see `Compile / doc` in kyo-settings), so a handful in parallel is enough to exhaust a 16GB
+// runner. Every project tags its `Compile / doc` with DocTag and concurrentRestrictions caps it
+// at 1, so docs build one module at a time while compilation and tests stay parallel.
 lazy val DocTag = Tags.Tag("doc")
 
 // CI concurrency controls:
@@ -82,10 +95,10 @@ Global / concurrentRestrictions := {
     val cores       = java.lang.Runtime.getRuntime.availableProcessors()
     val isCI        = sys.env.contains("CI")
     val testLimit   = 1 max (if (isCI) cores / 2 else math.ceil(cores * 0.8).toInt)
-    // Forked-test cap: how many forked test JVMs run concurrently. On CI we hard-cap at 2 so kyo-pod
-    // (which splits each suite into a podman fork and a docker fork via KYO_POD_RUNTIME pinning) ends
-    // up with at most one fork per daemon — strictly bounding container-daemon contention. Locally
-    // we allow up to half the cores for fast iteration; some same-daemon overlap is tolerable.
+    // Forked-test cap: how many forked test JVMs run concurrently. kyo-pod splits each suite into a
+    // podman fork and a docker fork (KYO_POD_RUNTIME pinning), so this bounds container-daemon
+    // contention. It is a numeric, daemon-blind cap (it does NOT guarantee one fork per daemon); real
+    // CI additionally serializes via SBT_TASK_LIMIT=1 (limitAll below). CI caps at 2; locally cores/2.
     val forkLimit = if (isCI) 2 else 1 max cores / 2
     Seq(
         Tags.limitAll(if (taskLimit != "0") taskLimit.toInt else cores),
@@ -99,20 +112,19 @@ Global / concurrentRestrictions := {
         // concurrentRestrictions wholesale, so we restate it here. See
         // KyoDoctestPlugin.scala for the tag's role.
         Tags.limit(DoctestTag, 2),
-        // Serialize scaladoc: dottydoc shares mutable compiler state across concurrent in-JVM
-        // `doc` runs and NPEs intermittently under parallelism. See DocTag above.
+        // Serialize scaladoc: each run is a forked JVM sized by the module it documents.
+        // See DocTag above.
         Tags.limit(DocTag, 1)
     )
 }
 
-// java.lang.foreign (the Foreign Function and Memory API) is final in JDK 22, so modules that use it
-// cannot target Java 17. They override the project-wide `-release 17` (added by kyo-settings) with
-// `-release 25` (current LTS). Because `-release 25` requires a JDK >= 25 to compile, the whole build
-// requires JDK 25 (see the Global/onLoad guard and the CI setup action). Modules that do not use the
-// API keep `-release 17`.
-lazy val foreignRelease = Seq(
-    scalacOptions --= scalacOptionTokens(Set(ScalacOptions.release("17"))).value,
-    scalacOptions ++= scalacOptionTokens(Set(ScalacOptions.release("25"))).value
+// The build targets `-release 25` (JDK 25), set globally in compilerOptions. It is required, not a
+// choice: kyo-data and the other foreign modules call java.lang.foreign, final in JDK 22, so the
+// whole build needs a JDK >= 25 to compile (see the Global/onLoad guard and the CI setup action).
+// Modules that must hold their own API surface to JDK 17 override back with release17.
+lazy val release17 = Seq(
+    scalacOptions --= scalacOptionTokens(Set(ScalacOptions.release("25"))).value,
+    scalacOptions ++= scalacOptionTokens(Set(ScalacOptions.release("17"))).value
 )
 
 lazy val `kyo-settings` = Seq(
@@ -121,10 +133,67 @@ lazy val `kyo-settings` = Seq(
     crossScalaVersions := List(scala3Version),
     scalacOptions ++= scalacOptionTokens(compilerOptions).value,
     Test / scalacOptions --= scalacOptionTokens(Set(ScalacOptions.warnNonUnitStatement)).value,
-    scalafmtOnCompile := true,
-    // Tag the doc task so concurrentRestrictions can serialize scaladoc across modules; dottydoc
-    // is not concurrency-safe in a single sbt JVM. See DocTag and Tags.limit(DocTag, 1) above.
-    Compile / doc := (Compile / doc).tag(DocTag).value,
+    // Not in CI: parallel cross-version compilations of one module format the same shared
+    // sources concurrently, and the loser logs "scalafmt: failed for 1 sources" on every
+    // Native job. The scalafmt workflow (scalafmtAll plus a dirty-tree check) is the CI
+    // enforcement; compile-time formatting is a local convenience only.
+    scalafmtOnCompile := !insideCI.value,
+    ivyConfigurations += ScaladocTool,
+    // The tool ships its own standard library, so it can only read a module whose library it agrees
+    // with. That holds for the current series and not for the LTS one, whose `scala.caps` differs
+    // and leaves two of it on the classpath, at which point resolving anything from `Predef` fails.
+    // The LTS modules therefore document with their own version and forgo the fix, which they have
+    // never needed: the crash it addresses appears in the current series.
+    libraryDependencies ++= (
+        if (!scalaVersion.value.startsWith("3")) Nil
+        else Seq("org.scala-lang" % "scaladoc_3" % scaladocToolVersion.value % ScaladocTool.name)
+    ),
+    // Render the API from TASTy with a forked scaladoc rather than sbt's in-process one. Forking is
+    // what bounds a tool crash to the module that provoked it: sbt's `doc` shares one JVM across
+    // every module, so a single failure there takes the rest of the platform with it.
+    Compile / doc := Def.task {
+        val out     = (Compile / doc / target).value
+        val log     = streams.value.log
+        val project = name.value
+        val srcs    = (Compile / doc / sources).value
+        val sep     = java.io.File.pathSeparator
+        val tool    = update.value.select(configurationFilter(ScaladocTool.name))
+        val deps    = (Compile / dependencyClasspath).value.map(_.data)
+        // `products` rather than `classDirectory`: it carries the same directories but is a task, so
+        // depending on it is what compiles this module before its TASTy is read.
+        val classes     = (Compile / products).value
+        val opts        = (Compile / doc / scalacOptions).value
+        val toolVersion = scaladocToolVersion.value
+        // This tool reads TASTy, which only the Scala 3 series emits, so the 2.13 and 2.12 modules
+        // (the kyo-scheduler family and the sbt plugins) have nothing it can read. They document
+        // empty, the same way modules that opt out via `Compile / doc / sources := Seq.empty` do:
+        // Maven Central requires a javadoc artifact to exist, not to have content.
+        if (srcs.isEmpty || !scalaVersion.value.startsWith("3")) {
+            IO.createDirectory(out)
+            out
+        } else {
+            IO.createDirectory(out)
+            log.info(s"Documenting $project with scaladoc $toolVersion")
+            val exit = Fork.java(
+                ForkOptions().withRunJVMOptions(Vector("-cp", tool.mkString(sep))),
+                Seq(
+                    "dotty.tools.scaladoc.Main",
+                    "-d",
+                    out.getAbsolutePath,
+                    "-project",
+                    project,
+                    "-classpath",
+                    deps.mkString(sep)
+                ) ++ opts ++ classes.map(_.getAbsolutePath)
+            )
+            if (exit != 0) sys.error(s"scaladoc failed for $project")
+            // Scaladoc exits 0 when handed nothing to read, so success alone does not mean a module
+            // was documented. Without this an empty api directory reaches the published javadoc jar.
+            if (PathFinder(out).allPaths.get.forall(!_.getName.endsWith(".html")))
+                sys.error(s"scaladoc produced no pages for $project")
+            out
+        }
+    }.tag(DocTag).value,
     scalacOptions += compilerOptionFailDiscard,
     // Treat compiler warnings as errors on the Scala 3 series. The Scala 2.13 cross-builds (the kyo-scheduler
     // family) carry a different, noisier warning set that is out of scope, so the flag is gated on Scala 3.
@@ -132,13 +201,22 @@ lazy val `kyo-settings` = Seq(
     Test / testOptions += Tests.Argument(TestFrameworks.ScalaTest, "-oDG"),
     ThisBuild / versionScheme := Some("early-semver"),
     Test / javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    // The process-lifetime default HttpClient is never closed, so its pool relies on the idle-expiry reaper to release
+    // sockets. Its 60s production idle timeout outlasts the leak check's 30s fd-drain window, so a connection pooled just
+    // before a fork ends would still be open at the check. Shorten it in the test fork only (production keeps 60s) so a
+    // reaped default-client connection drains well within the window. See kyo.http.client.defaultIdleTimeout.
+    Test / javaOptions += "-Dkyo.http.client.defaultIdleTimeout=2seconds",
     // Exclude generated FFI binding impls (src_managed *BindingsImpl from the kyo-ffi codegen): measuring
     // them tracks the generator, not hand-written code.
     coverageExcludedFiles := ".*src_managed.*",
-    // Compact object headers (JEP 519, a product flag in JDK 25 which the build requires) shrink the
-    // per-object header from 12-16 to 8 bytes. The test forks allocate heavily (kyo-tasty decodes 80k
-    // symbols), so this cuts heap pressure where the forks run closest to their cap.
-    Test / javaOptions += "-XX:+UseCompactObjectHeaders",
+    // Compact object headers (JEP 519) are buggy on JDK 25 under the forked test workload: heavy fiber
+    // concurrency + pervasive arraycopy (Chunk/Span) + G1GC hit JDK-8380060 and a G1 concurrent-mark
+    // metadata corruption, surfacing as a rare ClassNotFoundError for a class present on disk (the
+    // io_uring test flake). Force COH OFF in the forks explicitly so it stays off regardless of the
+    // driver's opts. The DRIVER JVM keeps COH ON (.jvmopts / CI JAVA_OPTS): it runs no forked-test
+    // workload, only compile and the Scala.js/Wasm linker, whose large graph needs COH's header
+    // savings to fit the 12 GB driver heap (without it the kyo-ui Wasm linker GC-thrashes to a hang).
+    Test / javaOptions += "-XX:-UseCompactObjectHeaders",
     // Forked test JVMs otherwise inherit no -Xmx and fall back to 25% of RAM (4GB on the 16GB CI
     // runners), too little for the heavy classpath-loading suites (kyo-tasty loads 80k-symbol
     // classpaths under globalK-way leaf concurrency). Pin an explicit fork heap on CI; with the
@@ -175,8 +253,8 @@ Global / onLoad := {
 
     val javaVersion  = System.getProperty("java.version")
     val majorVersion = javaVersion.split("\\.")(0).toInt
-    // The foreign-API modules (kyo-data, kyo-ffi, kyo-offheap, kyo-tasty) compile at -release 25, which
-    // requires a JDK >= 25; the rest of the build stays at -release 17. So the whole build needs JDK 25.
+    // The build compiles at -release 25, which requires a JDK >= 25 (the foreign modules call
+    // java.lang.foreign, final in JDK 22). So the whole build needs JDK 25.
     if (majorVersion < 25) {
         throw new IllegalStateException(
             s"Java version $javaVersion is not supported. Please use Java 25 (LTS) or higher."
@@ -257,7 +335,6 @@ lazy val kyoJVM: Project = project
     .aggregate(
         `kyo-scheduler`.jvm,
         `kyo-scheduler-zio`.jvm,
-        `kyo-scheduler-cats`.jvm,
         `kyo-scheduler-finagle`.jvm,
         `kyo-scheduler-pekko`.jvm,
         `kyo-data`.jvm,
@@ -265,6 +342,7 @@ lazy val kyoJVM: Project = project
         `kyo-prelude`.jvm,
         `kyo-parse`.jvm,
         `kyo-core`.jvm,
+        `kyo-system`.jvm,
         `kyo-offheap`.jvm,
         `kyo-ffi`.jvm,
         `kyo-ffi-codegen`,
@@ -291,6 +369,10 @@ lazy val kyoJVM: Project = project
         `kyo-schema-ion`.jvm,
         `kyo-schema-yaml`.jvm,
         `kyo-schema-tests`.jvm,
+        `kyo-sql`.jvm,
+        `kyo-sql-postgres`.jvm,
+        `kyo-sql-mysql`.jvm,
+        `kyo-sql-tests`.jvm,
         `kyo-http`.jvm,
         `kyo-flow`.jvm,
         `kyo-ai`.jvm,
@@ -302,12 +384,12 @@ lazy val kyoJVM: Project = project
         `kyo-bench`.jvm,
         `kyo-zio-test`.jvm,
         `kyo-zio`.jvm,
-        `kyo-cats`.jvm,
         `kyo-combinators`.jvm,
         `kyo-browser`.jvm,
         `kyo-slack`.jvm,
         `kyo-ui`.jvm,
         `kyo-markdown`.jvm,
+        `kyo-i18n`.jvm,
         `kyo-case-app`.jvm,
         `kyo-pod`.jvm,
         `kyo-examples`.jvm,
@@ -317,7 +399,6 @@ lazy val kyoJVM: Project = project
         `kyo-compat-future`.jvm,
         `kyo-compat-kyo`.jvm,
         `kyo-compat-zio`.jvm,
-        `kyo-compat-ce`.jvm,
         `kyo-compat-ox`.jvm,
         `kyo-compat-twitter-future`.jvm,
         `kyo-compat-plugin`,
@@ -346,6 +427,7 @@ lazy val kyoJS = project
         `kyo-prelude`.js,
         `kyo-parse`.js,
         `kyo-core`.js,
+        `kyo-system`.js,
         `kyo-ffi`.js,
         `kyo-ffi-it`.js,
         `kyo-net`.js,
@@ -358,7 +440,6 @@ lazy val kyoJS = project
         `kyo-stats-machine`.js,
         `kyo-zio-test`.js,
         `kyo-zio`.js,
-        `kyo-cats`.js,
         `kyo-combinators`.js,
         `kyo-case-app`.js,
         `kyo-actor`.js,
@@ -372,7 +453,12 @@ lazy val kyoJS = project
         `kyo-schema-ion`.js,
         `kyo-schema-yaml`.js,
         `kyo-schema-tests`.js,
+        `kyo-sql`.js,
+        `kyo-sql-postgres`.js,
+        `kyo-sql-mysql`.js,
+        `kyo-sql-tests`.js,
         `kyo-http`.js,
+        `kyo-aeron`.js,
         `kyo-flow`.js,
         `kyo-ai`.js,
         `kyo-jsonrpc`.js,
@@ -383,13 +469,13 @@ lazy val kyoJS = project
         `kyo-slack`.js,
         `kyo-ui`.js,
         `kyo-markdown`.js,
+        `kyo-i18n`.js,
         `kyo-website`.js,
         `kyo-website-bundle`.js,
         `kyo-pod`.js,
         `kyo-compat-future`.js,
         `kyo-compat-kyo`.js,
         `kyo-compat-zio`.js,
-        `kyo-compat-ce`.js,
         `kyo-test-api`.js,
         `kyo-test-runner`.js,
         `kyo-test-prop`.js,
@@ -400,7 +486,7 @@ lazy val kyoNative = project
     .in(file("native"))
     .settings(
         name := "kyoNative",
-        `native-settings`,
+        `native-settings-base`,
         publish / skip := true
     )
     .disablePlugins(MimaPlugin, KyoDoctestPlugin)
@@ -413,6 +499,7 @@ lazy val kyoNative = project
         `kyo-config`.native,
         `kyo-scheduler`.native,
         `kyo-core`.native,
+        `kyo-system`.native,
         `kyo-offheap`.native,
         `kyo-ffi`.native,
         `kyo-ffi-it`.native,
@@ -432,7 +519,12 @@ lazy val kyoNative = project
         `kyo-schema-ion`.native,
         `kyo-schema-yaml`.native,
         `kyo-schema-tests`.native,
+        `kyo-sql`.native,
+        `kyo-sql-postgres`.native,
+        `kyo-sql-mysql`.native,
+        `kyo-sql-tests`.native,
         `kyo-http`.native,
+        `kyo-aeron`.native,
         `kyo-flow`.native,
         `kyo-ai`.native,
         `kyo-jsonrpc`.native,
@@ -449,6 +541,7 @@ lazy val kyoNative = project
         `kyo-slack`.native,
         `kyo-ui`.native,
         `kyo-markdown`.native,
+        `kyo-i18n`.native,
         `kyo-pod`.native,
         `kyo-compat-future`.native,
         `kyo-compat-kyo`.native,
@@ -483,8 +576,13 @@ lazy val kyoWasm = project
         `kyo-schema-ion`.wasm,
         `kyo-schema-yaml`.wasm,
         `kyo-schema-tests`.wasm,
+        `kyo-sql`.wasm,
+        `kyo-sql-postgres`.wasm,
+        `kyo-sql-mysql`.wasm,
+        `kyo-sql-tests`.wasm,
         `kyo-scheduler`.wasm,
         `kyo-core`.wasm,
+        `kyo-system`.wasm,
         `kyo-ffi`.wasm,
         `kyo-direct`.wasm,
         `kyo-stm`.wasm,
@@ -501,6 +599,7 @@ lazy val kyoWasm = project
         `kyo-net`.wasm,
         `kyo-stats-otlp`.wasm,
         `kyo-stats-machine`.wasm,
+        `kyo-aeron`.wasm,
         `kyo-flow`.wasm,
         `kyo-ai`.wasm,
         `kyo-jsonrpc`.wasm,
@@ -512,6 +611,7 @@ lazy val kyoWasm = project
         `kyo-slack`.wasm,
         `kyo-ui`.wasm,
         `kyo-markdown`.wasm,
+        `kyo-i18n`.wasm,
         `kyo-test-api`.wasm,
         `kyo-test-runner`.wasm,
         `kyo-test-prop`.wasm,
@@ -527,6 +627,7 @@ lazy val `kyo-scheduler` =
         .in(file("kyo-scheduler"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             scalacOptions ++= scalacOptionToken(ScalacOptions.source3).value,
             crossScalaVersions := List(scala3LTSVersion, scala213Version)
@@ -553,6 +654,7 @@ lazy val `kyo-scheduler-zio` = sbtcrossproject.CrossProject("kyo-scheduler-zio",
     .dependsOn(`kyo-scheduler`)
     .settings(
         `kyo-settings`,
+        release17,
         scalacOptions ++= scalacOptionToken(ScalacOptions.source3).value,
         crossScalaVersions                      := List(scala3LTSVersion, scala213Version),
         libraryDependencies += "dev.zio"       %%% "zio"       % zioVersion,
@@ -564,22 +666,6 @@ lazy val `kyo-scheduler-zio` = sbtcrossproject.CrossProject("kyo-scheduler-zio",
         crossScalaVersions := List(scala3LTSVersion)
     )
 
-lazy val `kyo-scheduler-cats` =
-    crossProject(JVMPlatform)
-        .crossType(CrossType.Full)
-        .dependsOn(`kyo-scheduler`)
-        .in(file("kyo-scheduler-cats"))
-        .settings(
-            `kyo-settings`,
-            libraryDependencies += "org.typelevel" %%% "cats-effect" % catsVersion,
-            libraryDependencies += "org.scalatest" %%% "scalatest"   % scalaTestVersion % Test
-        )
-        .jvmSettings(mimaCheck(false))
-        .settings(
-            scalacOptions ++= scalacOptionToken(ScalacOptions.source3).value,
-            crossScalaVersions := List(scala3LTSVersion, scala213Version)
-        )
-
 lazy val `kyo-scheduler-pekko` =
     crossProject(JVMPlatform)
         .crossType(CrossType.Full)
@@ -587,6 +673,7 @@ lazy val `kyo-scheduler-pekko` =
         .in(file("kyo-scheduler-pekko"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.apache.pekko" %%% "pekko-actor"   % "1.6.0",
             libraryDependencies += "org.apache.pekko" %%% "pekko-testkit" % "1.6.0"          % Test,
             libraryDependencies += "org.scalatest"    %%% "scalatest"     % scalaTestVersion % Test
@@ -603,6 +690,7 @@ lazy val `kyo-scheduler-finagle` =
         .in(file("kyo-scheduler-finagle"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             libraryDependencies ++= {
                 if (scalaVersion.value == scala213Version)
@@ -638,7 +726,6 @@ lazy val `kyo-data` =
         .withKyoTest
         .settings(
             `kyo-settings`,
-            foreignRelease,
             libraryDependencies += "com.lihaoyi" %%% "pprint"        % "0.9.6",
             libraryDependencies += "dev.zio"     %%% "izumi-reflect" % "3.0.9" % Test
         )
@@ -714,11 +801,14 @@ lazy val `kyo-schema-json` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
         .dependsOn(`kyo-schema` % "test->test;compile->compile")
-        .dependsOn(`kyo-core` % "test->compile")
+        .dependsOn(`kyo-system`)
         .in(file("kyo-schema-json"))
         .withKyoTest
         .settings(`kyo-settings`)
-        .jvmSettings(mimaCheck(false))
+        .jvmSettings(
+            mimaCheck(false),
+            Test / javaOptions ~= (_.filterNot(_ == "--add-opens=java.base/java.lang=ALL-UNNAMED"))
+        )
         .nativeSettings(`native-settings`)
         .jsSettings(`js-settings`, Test / scalaJSLinkerConfig ~= (_.withModuleKind(ModuleKind.CommonJSModule)))
         .wasmSettings(`wasm-settings`)
@@ -794,6 +884,7 @@ lazy val `kyo-schema-ion` =
         .crossType(CrossType.Full)
         .dependsOn(`kyo-schema` % "test->test;compile->compile")
         .dependsOn(`kyo-core` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
         .in(file("kyo-schema-ion"))
         .withKyoTest
         .settings(`kyo-settings`)
@@ -813,6 +904,111 @@ lazy val `kyo-schema-yaml` =
         .jvmSettings(mimaCheck(false))
         .nativeSettings(`native-settings`)
         .jsSettings(`js-settings`, Test / scalaJSLinkerConfig ~= (_.withModuleKind(ModuleKind.CommonJSModule)))
+        .wasmSettings(`wasm-settings`)
+
+lazy val `kyo-sql` =
+    // Backend-agnostic core: the Postgres and MySQL wire drivers below depend on this module and are never
+    // depended on by it, so nothing here may name a type either declares. Compiling this module with no backend
+    // on the classpath is the gate for that (a same-package name is invisible to a grep).
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-core`)
+        // kyo-schema-json (not kyo-schema): SqlSchema is a self-contained codec typeclass; kyo-schema enters
+        // only at the JSON tier, for Sql.jsonColumn's Schema-based overload.
+        .dependsOn(`kyo-schema-json`)
+        .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        // CommonJS: the test path reaches Node builtins (kyo.Path -> node:fs, kyo-pod -> node:child_process,
+        // kyo-core entropy -> node:crypto); without it fastLinkJS fails to link them.
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        // openssl-native-settings: kyo-net's Native C shims reference TLS symbols (TLS_client_method,
+        // X509_free, ...), so a Native binary that reaches them must link libssl/libcrypto or nativeLink fails.
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+// The two backend modules below are deliberately symmetric (same platforms, edges, settings); a difference is
+// a bug unless it names a wire feature only one engine has. Both take `test->test` on `kyo-sql` (not just
+// `compile->compile`) to reuse its test fixtures (`Test`, `FakeServer`, `OwnContainer`, `StubConnection`, the
+// mocks) rather than duplicate them. Other edges (`kyo-core`, `kyo-net`, `kyo-schema-json`) arrive transitively;
+// `kyo-pod` is redeclared because `kyo-sql` takes it test-scope only and that does not propagate.
+lazy val `kyo-sql-postgres` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql-postgres"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        // CommonJS, same as kyo-sql: the test path reaches Node builtins (kyo-pod's harness, kyo-core entropy).
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        // openssl-native-settings: this module's auth/TLS sources reach kyo-net's Native C shims, so a test
+        // binary that touches them must link libssl/libcrypto or nativeLink fails.
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+lazy val `kyo-sql-mysql` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql-mysql"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+// Unpublished; it holds the suites whose SUBJECT spans both engines and so have no single-module home: the
+// cross-backend suites that name both clients/factories to prove they behave the same through one abstract
+// surface, and the container-driven suites sharing `internal/SqlSharedContainers`. That fixture connects to
+// both engines directly, so it can live neither in core (which must compile with no backend) nor in one engine
+// module (the other's suites could not see it). `test->test` on all three lets the suites reuse core's `Test`
+// base and mocks plus each engine's fixtures; `publish / skip` keeps the shipped artifact count at three.
+lazy val `kyo-sql-tests` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-sql-postgres` % "test->test;compile->compile")
+        .dependsOn(`kyo-sql-mysql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .in(file("kyo-sql-tests"))
+        .withKyoTest
+        .settings(`kyo-settings`, publish / skip := true)
+        .jvmSettings(mimaCheck(false))
+        // No README, so nothing to validate. Left unset the plugin would look for one that does not exist.
+        .jvmConfigure(_.settings(doctestSources := Seq.empty))
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        .nativeSettings(
+            `native-settings`,
+            `openssl-native-settings`,
+            // Scala Native resolves ServiceLoader at LINK time, so a META-INF/services provider works only when
+            // also enlisted here; without this, runtime backend discovery finds nothing on Native.
+            Test / nativeConfig ~= (_.withServiceProviders(Map("kyo.db.Backend" -> Seq(
+                "kyo.internal.postgres.PostgresBackendFactory",
+                "kyo.internal.mysql.MysqlBackendFactory"
+            ))))
+        )
         .wasmSettings(`wasm-settings`)
 
 lazy val `kyo-core` =
@@ -838,13 +1034,25 @@ lazy val `kyo-core` =
             libraryDependencies += ("org.scala-js" %%% "scalajs-java-logging" % "1.0.0").cross(CrossVersion.for3Use2_13)
         )
 
+lazy val `kyo-system` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .in(file("kyo-system"))
+        .dependsOn(`kyo-core`)
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        .nativeSettings(`native-settings`)
+        .jsSettings(`js-settings`, scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) })
+        .wasmSettings(`wasm-settings`)
+
 lazy val `kyo-offheap` =
     crossProject(JVMPlatform, NativePlatform)
         .crossType(CrossType.Full)
         .in(file("kyo-offheap"))
         .dependsOn(`kyo-core`)
         .withKyoTest
-        .settings(`kyo-settings`, foreignRelease)
+        .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
         .jvmConfigure(_.settings(
             doctestScalacOptions := Seq("-release", "25")
@@ -859,8 +1067,9 @@ lazy val `kyo-ffi` =
         .crossType(CrossType.Full)
         .in(file("kyo-ffi"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
-        .settings(`kyo-settings`, foreignRelease)
+        .settings(`kyo-settings`)
         .jvmSettings(
             mimaCheck(false),
             doctestScalacOptions := Seq("-release", "25"),
@@ -879,8 +1088,9 @@ lazy val `kyo-ffi` =
         )
         .jsSettings(
             `js-settings`,
-            // koffi and the node:fs mmap facade are @JSImport modules, so the JS backend needs a module kind
-            // (the default NoModule cannot link an @JSImport). Use ESModule to match the wasm backend: under a
+            // The node:fs mmap facade is an @JSImport module (koffi itself is resolved dynamically, not via
+            // @JSImport), so the JS backend needs a module kind (the default NoModule cannot link an @JSImport).
+            // Use ESModule to match the wasm backend: under a
             // CommonJS module Node keeps `require` module-scoped, which the browser-gate reads (and its
             // BrowserDetectionTest simulation) cannot observe, whereas ESModule has no `require` and the gate
             // behaves identically to the wasm axis.
@@ -898,10 +1108,10 @@ lazy val `kyo-ffi-it` =
         .in(file("kyo-ffi/it"))
         .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-ffi`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`,
-            foreignRelease,
             publish / skip := true,
             // In-repo bootstrap: hand the plugin the codegen project's own classpath so a cold
             // `kyo-ffi-it/test` builds the codegen first and generates the impls directly, with no
@@ -998,7 +1208,6 @@ lazy val `kyo-ffi-codegen` =
         .dependsOn(`kyo-ffi`.jvm % Test)
         .settings(
             `kyo-settings`,
-            foreignRelease,
             libraryDependencies += "org.scala-lang" %% "scala3-tasty-inspector" % scalaVersion.value,
             libraryDependencies += "org.scala-lang" %% "scala3-compiler"        % scalaVersion.value % Test,
             // kyo-test framework wiring (the JVM-only equivalent of .withKyoTest, which only applies to crossProjects).
@@ -1092,7 +1301,6 @@ lazy val `kyo-ffi-bench` =
         .disablePlugins(MimaPlugin)
         .settings(
             `kyo-settings`,
-            foreignRelease,
             publish / skip := true,
             Compile / javaOptions ++= Seq("--enable-native-access=ALL-UNNAMED"),
             run / fork := true
@@ -1137,6 +1345,7 @@ lazy val `kyo-actor` =
         .crossType(CrossType.Full)
         .in(file("kyo-actor"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
@@ -1149,11 +1358,11 @@ lazy val `kyo-tasty` =
         .crossType(CrossType.Full)
         .in(file("kyo-tasty"))
         .dependsOn(`kyo-core`, `kyo-schema`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json` % "test->compile")
         .withKyoTest
         .settings(
             `kyo-settings`,
-            foreignRelease,
             doctestPredef := Seq("import kyo.*", "import kyo.Tasty.*")
         )
         .jvmSettings(
@@ -1173,14 +1382,11 @@ lazy val `kyo-tasty` =
             // downloading large transitive closures (Spark: ~5 GB; Play: ~500 MB). kyo-tasty
             // loads only .tasty files in the jar; missing transitive deps produce
             // Symbol.Unresolved stubs (not TastyError entries), so errors.isEmpty holds.
-            libraryDependencies += "com.typesafe.akka"  % "akka-actor_3"    % "2.6.20"  % Test intransitive (),
-            libraryDependencies += "org.typelevel"     %% "cats-effect"     % "3.7.0"   % Test intransitive (),
-            libraryDependencies += "org.http4s"        %% "http4s-core"     % "0.23.28" % Test intransitive (),
-            libraryDependencies += "org.apache.pekko"  %% "pekko-actor"     % "1.1.3"   % Test intransitive (),
-            libraryDependencies += "org.playframework" %% "play"            % "3.0.2"   % Test intransitive (),
-            libraryDependencies += "org.apache.spark"   % "spark-core_2.13" % "3.5.1"   % Test intransitive (),
-            libraryDependencies += "org.typelevel"     %% "spire"           % "0.18.0"  % Test intransitive (),
-            libraryDependencies += "dev.zio"           %% "zio"             % "2.0.15"  % Test intransitive ()
+            libraryDependencies += "com.typesafe.akka"  % "akka-actor_3"    % "2.6.20" % Test intransitive (),
+            libraryDependencies += "org.apache.pekko"  %% "pekko-actor"     % "1.1.3"  % Test intransitive (),
+            libraryDependencies += "org.playframework" %% "play"            % "3.0.2"  % Test intransitive (),
+            libraryDependencies += "org.apache.spark"   % "spark-core_2.13" % "3.5.1"  % Test intransitive (),
+            libraryDependencies += "dev.zio"           %% "zio"             % "2.0.15" % Test intransitive ()
         )
         .nativeSettings(`native-settings`)
         .jsSettings(
@@ -1233,6 +1439,7 @@ lazy val `kyo-stats-registry` =
         .in(file("kyo-stats-registry"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             scalacOptions ++= scalacOptionToken(ScalacOptions.source3).value,
             crossScalaVersions := List(scala3LTSVersion, scala213Version)
@@ -1248,6 +1455,7 @@ lazy val `kyo-config` =
         .in(file("kyo-config"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             scalacOptions ++= scalacOptionToken(ScalacOptions.source3).value,
             crossScalaVersions := List(scala3LTSVersion, scala213Version)
@@ -1286,6 +1494,7 @@ lazy val `kyo-stats-machine` =
         .in(file("kyo-stats-machine"))
         .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-ffi`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`,
@@ -1399,7 +1608,10 @@ lazy val `kyo-stats-machine` =
                         ))
                         .withEnv(Map(
                             "KYO_MACHINE_DISABLED"       -> "true",
-                            "KYO_FFI_MACHINE_MACOS_PATH" -> shim.getAbsolutePath
+                            "KYO_FFI_MACHINE_MACOS_PATH" -> shim.getAbsolutePath,
+                            // Wasm (ESModule) has no `require` global; KoffiFacade resolves koffi via
+                            // node:module.createRequire, which searches NODE_PATH for the bootstrapped package.
+                            "NODE_PATH" -> (target.value / "node_modules").getAbsolutePath
                         ))
                 )
             },
@@ -1444,24 +1656,23 @@ lazy val `kyo-reactive-streams` =
         .jsSettings(`js-settings`)
         .wasmSettings(`wasm-settings`)
 
-// Host os-arch in the build-boringssl.sh / staged/<os-arch>/ naming (e.g. "darwin-aarch64").
-def boringSslHostOsArch: String = {
-    val osName = System.getProperty("os.name", "").toLowerCase
-    val os =
-        if (osName.contains("mac")) "darwin"
-        else if (osName.contains("win")) "windows"
-        else "linux"
-    val arch = System.getProperty("os.arch", "") match {
-        case "x86_64" | "amd64"  => "x86_64"
-        case "aarch64" | "arm64" => "aarch64"
-        case other               => other
-    }
-    s"$os-$arch"
-}
+// npm is `npm.cmd` on Windows, where CreateProcess resolves only .exe from a bare name;
+// the koffi bootstraps below spawn it directly (not via a shell).
+def npmCommand: String =
+    if (System.getProperty("os.name", "").toLowerCase.contains("win")) "npm.cmd" else "npm"
+
+// Host os-arch in the staged/<os-arch>/ naming used by build-boringssl.sh and
+// kyo-aeron/scripts/build-aeron.sh (e.g. "darwin-aarch64"). Delegates to the kyo-ffi plugin's host
+// resolver (KyoFfiPlugin.autoImport.ffiHostOsArch), the same one ffiCompile and the Packager resolve
+// the target from, so this build and the packaged resource layout can never name the host
+// differently. That matters on musl: this used to answer "linux-x86_64" on Alpine while the plugin
+// packaged into META-INF/native/linux-musl-x86_64/, so a musl leg that staged BoringSSL under its
+// runtime-correct name was not found here and the build silently fell back to the TLS stub.
+def hostOsArch: String = ffiHostOsArch
 
 // The staged BoringSSL tree for the host os-arch, present only after build-boringssl.sh ran.
 def boringSslStagedDir(baseDir: File): File =
-    baseDir / "build" / "boringssl" / "staged" / boringSslHostOsArch
+    baseDir / "build" / "boringssl" / "staged" / hostOsArch
 
 // True when libssl.a + libcrypto.a + the openssl headers are staged for the host os-arch.
 def boringSslStaged(baseDir: File): Boolean = {
@@ -1493,10 +1704,6 @@ def systemOpensslPrefix: Option[File] = {
 // codegen probe must find openssl/ssl.h here, or it emits a throwing stub instead of an @extern binding.
 def systemOpensslIncludeDirs: Seq[File] =
     systemOpensslPrefix.map(p => Seq(p / "include")).getOrElse(Seq(new java.io.File("/usr/include")))
-
-// -L lib search dirs for the system-OpenSSL archives/dylibs. Empty on Linux (default link path).
-def systemOpensslLibDirs: Seq[File] =
-    systemOpensslPrefix.map(p => Seq(p / "lib")).getOrElse(Nil)
 
 // The exact flags `openssl-native-settings` appends for system OpenSSL; factored out so
 // `stripSystemOpensslForStagedBoringSsl` can undo them by exact subsequence match (a bare -lssl/-lcrypto
@@ -1551,28 +1758,82 @@ def stagedBoringSslForceLoadLinkOpts(kyoNetBase: File): Seq[String] =
         forceLoad ++ boringSslCxxRuntimeFlags
     }
 
+// Koffi bootstrap for the Node-run test platforms. Both JS and Wasm run the koffi posix transport on Node and resolve koffi dynamically at
+// first native-load (the Wasm/ESModule leg via NODE_PATH; see kyoNetFfiEnvMap), so both need koffi installed in the target's node_modules
+// before tests run. Hooked on Test / compile (not Test / test) so test, testOnly,
+// and testQuick all trigger it, and it re-runs after a clean. Idempotent on the marker.
+val kyoNetKoffiInstall: Def.Initialize[Task[Unit]] = Def.task {
+    val log        = streams.value.log
+    val targetBase = target.value
+    val nodeMods   = targetBase / "node_modules"
+    val marker     = nodeMods / "koffi" / "package.json"
+    val koffiRange = "^2.7" // must match kyo.ffi.internal.FfiErrors.KoffiSupportedRange
+    val pjContent  = s"""{"name":"kyo-net-node-test","private":true,"dependencies":{"koffi":"$koffiRange"}}"""
+    val pj         = targetBase / "package.json"
+    if (!pj.exists() || IO.read(pj) != pjContent) {
+        IO.createDirectory(targetBase)
+        IO.write(pj, pjContent)
+    }
+    if (!marker.exists()) {
+        log.info(s"[kyo-net] installing koffi@$koffiRange into $targetBase ...")
+        val rc = scala.sys.process.Process(
+            Seq(npmCommand, "install", "--no-audit", "--no-fund", "--silent"),
+            targetBase
+        ).!
+        if (rc != 0) sys.error(s"npm install koffi failed (exit $rc)")
+    }
+}
+
+// The plugin-compiled native paths for the koffi posix transport and its BoringSSL TLS, exported via KYO_FFI_<LIBID>_PATH to the Node/Wasm
+// test runtime. The plugin owns the artifact-naming convention and the host os/arch (musl probe included); re-deriving them here is how the
+// path resolves `-linux-musl-x86_64.so` on Alpine where a naive `-linux-x86_64.so` would miss. ffiCompile always emits both artifacts (the
+// real staged lib when BoringSSL is staged for this host, else the probe-unavailable stub), so pointing koffi at them is safe either way:
+// on a staged host the `[posix / boringssl]` TLS cells run, on a non-staged host they cancel via the probe, matching JVM/Native.
+def kyoNetFfiEnvMap(targetDir: File): Map[String, String] = {
+    val ffiOut = targetDir / "ffi"
+    Map(
+        "KYO_FFI_KYONET_POSIX_URING_PATH" -> (ffiOut / ffiArtifactName("kyonet_posix_uring", ffiHostOsArch)).getAbsolutePath,
+        "KYO_FFI_KYONET_BORINGSSL_PATH"   -> (ffiOut / ffiArtifactName("kyonet_boringssl", ffiHostOsArch)).getAbsolutePath,
+        // The Wasm (ESModule) leg has no `require` global, so KoffiFacade resolves koffi via
+        // node:module.createRequire, which searches NODE_PATH. Point it at the target's node_modules where the
+        // koffi bootstrap installs the package. Harmless on the CommonJS (js) leg, which uses the `require` global.
+        "NODE_PATH" -> (targetDir / "node_modules").getAbsolutePath
+    )
+}
+
+// P2b completeness guard (DECISION-P2b-classifier.md Decision 5, layout-first per DECISION-P1 §6): a native
+// classifier jar must carry a real native for every library id the P1 library-state manifest records as `native`
+// or `prebuilt`, and must never ship a `stub`. Keys on the state manifest
+// (META-INF/kyo-ffi/library-state/<module>.state, states native/stub/prebuilt/absent) plus the resource layout
+// (META-INF/native/<os>-<arch>/lib<id>.<ext>). JVM only: JS/Wasm ship natives via the env/npm path and Native links
+// them directly. When M lands it adds the manifest-equals-support-set check on top.
+val kyoNetNativeClassifierGuard = taskKey[Unit](
+    "Assert every library-state `native`/`prebuilt` id has a real native artifact in the resource layout, and no `stub` ships."
+)
+
+// P2b classifier slice: the per-os-arch native classifier jars + the all-natives aggregator, appended to
+// `Compile / packagedArtifacts` (via `++=`, never a self-referential `:=`). Separate task so the extension is
+// non-cyclic. DECISION-P2b-classifier.md Decisions 1 + 3.
+val kyoNetClassifierArtifacts = taskKey[Map[Artifact, File]](
+    "Per-os-arch native classifier jars (transport-native `<os-arch>`, vendored-BoringSSL `<os-arch>-boringssl`) + the `all-natives` aggregator."
+)
+
 lazy val `kyo-net` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
+        .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-core`, `kyo-config`)
-        // FFI (Panama on JVM, Scala Native @extern) backs the posix transport on JVM and Native only; JS and
-        // Wasm use the Node backend. So KyoFfiPlugin, the kyo-ffi dependency, and the C-shim ffiLibraries are
-        // scoped here. ffiCodegenClasspath feeds the plugin the codegen classpath for in-build gen (mirrors
-        // kyo-ffi-it).
-        .jvmConfigure(
-            _.enablePlugins(KyoFfiPlugin)
-                .dependsOn(`kyo-ffi`.jvm)
-                .settings(ffiCodegenClasspath := (LocalProject("kyo-ffi-codegen") / Compile / fullClasspath).value.map(_.data))
-        )
-        .nativeConfigure(
-            _.enablePlugins(KyoFfiPlugin)
-                .dependsOn(`kyo-ffi`.native)
-                .settings(ffiCodegenClasspath := (LocalProject("kyo-ffi-codegen") / Compile / fullClasspath).value.map(_.data))
-        )
+        .dependsOn(`kyo-system`)
+        .dependsOn(`kyo-ffi`)
         .in(file("kyo-net"))
         .withKyoTest
-        .settings(`kyo-settings`)
-        .platformsSettings(JVMPlatform, NativePlatform)(
+        // FFI backs the posix transport and BoringSSL TLS on ALL FOUR platforms (Panama on JVM, Scala Native
+        // @extern, koffi-on-Node on JS and Wasm), so KyoFfiPlugin, the kyo-ffi dependency, and the C-shim
+        // ffiLibraries are uniform (mirrors kyo-aeron / kyo-ffi-it). The bindings + drivers live in `shared`.
+        // ffiCodegenClasspath feeds the plugin the codegen classpath for in-build gen.
+        .settings(
+            `kyo-settings`,
+            ffiCodegenClasspath := (LocalProject("kyo-ffi-codegen") / Compile / fullClasspath).value.map(_.data),
             // Only the io_uring shim needs a declared library (-luring, Linux only via linkLibsByOs; staticLink folds
             // liburing in, RI-003); the socket/epoll/kqueue bindings resolve to system libc. On Native, IoUringBindings
             // is nativeBundled: the plugin copies kyo_uring.c in; only -luring reaches the final link (Linux).
@@ -1604,14 +1865,14 @@ lazy val `kyo-net` =
                             id = "kyonet_boringssl",
                             cSources = (sharedBase / "src" / "main" / "c-boringssl-stub" ** "*.c").get
                         )
-                // System OpenSSL (kyonet_openssl): the kyo_net_openssl.c shim, the system-OpenSSL twin (macOS openssl@3,
-                // Linux libssl-dev). Its kyo_ossl_* prefix keeps it distinct from kyo_bssl_* in the one Native binary.
-                // includeDirs gate the Native probe; on Native the SSL_* are already linked by openssl-native-settings, so
-                // this adds no link flags. Absent headers -> the probe stubs the binding.
+                // System OpenSSL (kyonet_openssl): the kyo_net_openssl.c shim, registered only in the Native TLS registry
+                // (SystemOpenSslProvider). It is a REAL binding only on Native when the openssl headers are present; on the
+                // JVM (where BoringSslProvider over the JDK SSLEngine floor covers TLS and no code path loads it), and on
+                // Native without headers, it is declared as a STUB with no C sources, so no static OpenSSL blob is bundled.
+                // The stub still declares the library id, so the FFI codegen's library-id validation passes for the
+                // always-present OpenSslBindings trait; the JVM jar simply no longer carries the ~6.5MB dead-weight archive.
                 val openSsl =
-                    if (!systemOpensslIncludeDirs.exists(d => (d / "openssl" / "ssl.h").exists()))
-                        FfiLibrary(id = "kyonet_openssl", cSources = Nil)
-                    else if (isNative)
+                    if (isNative && systemOpensslIncludeDirs.exists(d => (d / "openssl" / "ssl.h").exists()))
                         FfiLibrary(
                             id = "kyonet_openssl",
                             cSources = (sharedBase / "src" / "main" / "c-openssl" ** "*.c").get,
@@ -1619,15 +1880,7 @@ lazy val `kyo-net` =
                             includeDirs = systemOpensslIncludeDirs
                         )
                     else
-                        FfiLibrary(
-                            id = "kyonet_openssl",
-                            cSources = (sharedBase / "src" / "main" / "c-openssl" ** "*.c").get,
-                            cHeaders = (sharedBase / "src" / "main" / "c-openssl" ** "*.h").get,
-                            includeDirs = systemOpensslIncludeDirs,
-                            libDirs = systemOpensslLibDirs,
-                            linkLibs = Seq("ssl", "crypto"),
-                            staticLink = true
-                        )
+                        FfiLibrary(id = "kyonet_openssl", cSources = Nil)
                 Seq(
                     FfiLibrary(
                         id = "kyonet_posix_uring",
@@ -1638,9 +1891,106 @@ lazy val `kyo-net` =
                     boringSsl,
                     openSsl
                 )
+            },
+            // The BoringSSL stub declares (placeholder) C sources, so KyoFfiPlugin's library-state manifest cannot tell it from a
+            // real build (it records any library with C sources as `native`). Declare it a stub on a non-staged host so the manifest
+            // records `kyonet_boringssl=stub`, and the completeness guard rejects a stub jar; empty on a staged host, where the real
+            // BoringSSL native is bundled. `boringSslStaged` reads this host's `build/boringssl/staged/<os-arch>`, the same gate the
+            // `ffiLibraries` boringSsl branch above uses.
+            ffiStubLibraries := {
+                if (boringSslStaged(baseDirectory.value / "..")) Nil else Seq("kyonet_boringssl")
             }
         )
-        .jvmSettings(mimaCheck(false))
+        .jvmSettings(
+            mimaCheck(false),
+            kyoNetNativeClassifierGuard := {
+                val log        = streams.value.log
+                val generated  = (Compile / managedResources).value // runs ffiPackagedNatives + the state-manifest generator
+                val stateFiles = generated.filter(f => f.getName.endsWith(".state") && f.getParentFile.getName == "library-state")
+                if (stateFiles.isEmpty)
+                    sys.error("[kyo-net native-guard] no library-state manifest was generated; cannot verify native completeness.")
+                val nativeFiles = generated.filter { f =>
+                    val n = f.getName
+                    (n.endsWith(".so") || n.endsWith(".dylib") || n.endsWith(".dll")) &&
+                    f.getParentFile.getParentFile.getName == "native" // .../META-INF/native/<os-arch>/lib<id>.<ext>
+                }
+                def nativePresent(id: String): Boolean =
+                    nativeFiles.exists(f => f.getName.startsWith(s"lib$id.") && f.length > 0)
+                stateFiles.foreach { sf =>
+                    IO.readLines(sf).foreach { line =>
+                        val kv = line.split("=", 2)
+                        if (kv.length == 2) {
+                            val id    = kv(0).trim
+                            val state = kv(1).trim
+                            state match {
+                                case "stub" =>
+                                    sys.error(
+                                        s"[kyo-net native-guard] library '$id' is a STUB in ${sf.getName}: a stub must not ship in a " +
+                                            "native classifier jar. Stage the real native (build/boringssl) for this os-arch, or exclude the classifier."
+                                    )
+                                case "native" | "prebuilt" =>
+                                    if (!nativePresent(id))
+                                        sys.error(
+                                            s"[kyo-net native-guard] library '$id' is declared '$state' but no non-empty " +
+                                                s"META-INF/native/*/lib$id.* artifact was produced; the build did not compile or stage it."
+                                        )
+                                case "absent" => () // intentionally empty (e.g. kyonet_openssl on JVM); no native expected
+                                case other =>
+                                    sys.error(s"[kyo-net native-guard] library '$id' has unknown state '$other' in ${sf.getName}.")
+                            }
+                        }
+                    }
+                }
+                log.info(s"[kyo-net native-guard] passed (${stateFiles.map(_.getName).mkString(", ")}).")
+            },
+            Compile / packageBin := (Compile / packageBin).dependsOn(kyoNetNativeClassifierGuard).value,
+            // P2b (DECISION-P2b-classifier.md Decisions 1-3): the MAIN jar carries NO natives (pure-JVM NIO floor).
+            // The natives ship in per-os-arch classifier jars sliced from the META-INF/native/<os-arch> resource tree:
+            // the transport-native family (kyonet_posix_uring, classifier `<os-arch>`) and the vendored-BoringSSL family
+            // (kyonet_boringssl, classifier `<os-arch>-boringssl`), plus an all-natives aggregator (classifier `all-natives`).
+            Compile / packageBin / mappings := (Compile / packageBin / mappings).value.filterNot {
+                case (_, path) => path.startsWith("META-INF/native/")
+            },
+            kyoNetClassifierArtifacts := {
+                val log  = streams.value.log
+                val res  = (Compile / managedResources).value
+                val ver  = version.value
+                val out  = crossTarget.value
+                val base = "kyo-net"
+                // Native files in the resource tree as (os-arch, library-id, file). Layout: META-INF/native/<os-arch>/lib<id>.<ext>.
+                val nativeEntries = res.collect {
+                    case f
+                        if (f.getName.endsWith(".so") || f.getName.endsWith(".dylib") || f.getName.endsWith(".dll")) &&
+                            f.getParentFile.getParentFile.getName == "native" =>
+                        val osArch = f.getParentFile.getName
+                        val libId  = f.getName.stripPrefix("lib").takeWhile(_ != '.')
+                        (osArch, libId, f)
+                }
+                def familyClassifier(osArch: String, libId: String): Option[String] = libId match {
+                    case "kyonet_posix_uring" => Some(osArch)
+                    case "kyonet_boringssl"   => Some(s"$osArch-boringssl")
+                    case _                    => None // kyonet_openssl etc. is not a JVM classifier family
+                }
+                def sliceJar(classifier: String, files: Seq[File]): (Artifact, File) = {
+                    val jar     = out / s"$base-$ver-$classifier-natives.jar"
+                    val entries = files.map(f => f -> s"META-INF/native/${f.getParentFile.getName}/${f.getName}")
+                    IO.zip(entries, jar, None)
+                    Artifact(base).withType("jar").withExtension("jar").withClassifier(Some(classifier)) -> jar
+                }
+                val perClassifier = nativeEntries
+                    .groupBy { case (osArch, libId, _) => familyClassifier(osArch, libId) }
+                    .collect { case (Some(classifier), entries) => sliceJar(classifier, entries.map(_._3)) }
+                    .toMap
+                val allNatives =
+                    if (nativeEntries.nonEmpty) Map(sliceJar("all-natives", nativeEntries.map(_._3)))
+                    else Map.empty[Artifact, File]
+                val result = perClassifier ++ allNatives
+                log.info(s"[kyo-net classifier] ${nativeEntries.size} native(s) -> ${result.keys.flatMap(_.classifier).mkString(", ")}")
+                result
+            },
+            // Project-scoped `packagedArtifacts` is what `publish`/`ci-release` uploads (Compile / packagedArtifacts does not reach it).
+            packagedArtifacts ++= kyoNetClassifierArtifacts.value
+        )
         .nativeSettings(
             `native-settings`,
             `openssl-native-settings`,
@@ -1678,8 +2028,129 @@ lazy val `kyo-net` =
         .jsSettings(
             `js-settings`,
             scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) },
-            // Point the JS runtime at the plugin-compiled io_uring shim via KYO_FFI_<LIBID>_PATH,
-            // and bootstrap koffi into Node's resolver before tests run (mirrors kyo-ffi-it).
+            // Point the Node runtime at the plugin-compiled koffi natives and bootstrap koffi into node_modules before tests run.
+            Test / jsEnv := new NodeJSEnv(
+                NodeJSEnv.Config()
+                    .withArgs(List("--max_old_space_size=5120"))
+                    .withEnv(kyoNetFfiEnvMap(target.value))
+            ),
+            Test / compile := (Test / compile).dependsOn(kyoNetKoffiInstall).value
+        )
+        // Wasm runs the same koffi posix transport on Node as JS (it `import`s koffi at module load), so it needs the identical koffi bootstrap
+        // and native-path env; only the NodeJSEnv args differ (the WASM backend needs `--experimental-wasm-exnref`, Node 24+, matching
+        // `wasm-settings`).
+        .wasmSettings(
+            `wasm-settings`,
+            Test / jsEnv := new NodeJSEnv(
+                NodeJSEnv.Config()
+                    .withArgs(List("--max_old_space_size=5120", "--experimental-wasm-exnref"))
+                    .withEnv(kyoNetFfiEnvMap(target.value))
+            ),
+            Test / compile := (Test / compile).dependsOn(kyoNetKoffiInstall).value
+        )
+
+lazy val `kyo-aeron` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .enablePlugins(KyoFfiPlugin)
+        .in(file("kyo-aeron"))
+        .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
+        .dependsOn(`kyo-ffi`)
+        .dependsOn(`kyo-schema`)
+        // Schema types the public publish/stream surface; MsgPack encodes the Envelope on the wire and
+        // lives in the per-format module since the schema family split, like kyo-test-snapshot.
+        .dependsOn(`kyo-schema-msgpack`)
+        .withKyoTest
+        .settings(
+            `kyo-settings`,
+            // Hand the plugin the codegen project's own classpath (mirrors kyo-ffi-it) so a cold
+            // build compiles the codegen first. Without it ffiGenerate falls back to the plugin's
+            // bundled-resource path, absent on a clean checkout, and Ffi.load fails with ImplNotFound.
+            ffiCodegenClasspath := (LocalProject("kyo-ffi-codegen") / Compile / fullClasspath).value.map(_.data),
+            ffiLibraries := {
+                // baseDirectory is the per-platform dir for a cross-project, so the shared C shim and
+                // the staged aeron archives are one level up.
+                val sharedBase  = baseDirectory.value / ".." / "shared"
+                val aeronStaged = baseDirectory.value / ".." / "build" / "aeron" / "staged" / hostOsArch
+                // Aeron's CMake records these as aeron_driver_static's link interface but does not bake
+                // them into the .a, so linking the archive directly leaves uuid_generate, pthread, and
+                // friends undefined unless named here. They belong in linkFlags rather than linkLibsByOs
+                // because linkLibsByOs is static-folded (-Wl,-Bstatic) and these must stay dynamic: the
+                // runners' libuuid.a is non-PIC and cannot go into the shim's shared object. -latomic is
+                // aarch64-only, where 64-bit atomic_fetch_add lowers to an out-of-line libatomic call.
+                // macOS supplies all of them via libSystem.
+                val aeronArch = hostOsArch.split("-").lastOption.getOrElse("")
+                val isWindows = hostOsArch.startsWith("windows")
+                val linuxSystemLinkFlags =
+                    if (hostOsArch.startsWith("linux"))
+                        Seq("-lpthread", "-lm", "-ldl", "-luuid") ++ (if (aeronArch == "aarch64") Seq("-latomic") else Nil)
+                    else Nil
+                Seq(
+                    FfiLibrary(
+                        id = "kyo_aeron",
+                        cSources = (sharedBase / "src" / "main" / "c" ** "*.c").get,
+                        includeDirs = Seq(
+                            aeronStaged / "include" / "aeron",
+                            aeronStaged / "include" / "aeronmd"
+                        ),
+                        libDirs = Seq(aeronStaged / "lib"),
+                        // aeron_driver_static already embeds the full client, so it alone provides the
+                        // complete client + driver API. Adding aeron_static too duplicates every client
+                        // symbol and fails the Darwin ld64 link.
+                        linkLibs = Seq("aeron_driver_static"),
+                        // Windows needs aeron's declared winsock stack plus shell32 (SHFileOperation,
+                        // used by aeron's file utils), rendered as `.lib` by the plugin under MSVC.
+                        linkLibsByOs = if (isWindows) Map("windows" -> Seq("ws2_32", "wsock32", "Iphlpapi", "shell32")) else Map.empty,
+                        linkFlags = linuxSystemLinkFlags,
+                        // Aeron supports Windows only under MSVC (its sources gate on _MSC_VER) and forces
+                        // the dynamic CRT (/MD), so on Windows the shim compiles with cl and /MD.
+                        // staticLink=true would add /MT (static CRT) and clash with aeron's /MD; the aeron
+                        // .lib is embedded by the link regardless, so Windows uses staticLink=false.
+                        cFlags = if (isWindows) Seq("/MD") else Nil,
+                        compilerByOs = if (isWindows) Map("windows" -> "cl") else Map.empty,
+                        staticLink = !isWindows
+                    )
+                )
+            }
+        )
+        .jvmSettings(
+            mimaCheck(false),
+            fork := true,
+            // The four --add-opens this used to need were io.aeron's: its embedded Java MediaDriver
+            // reaches into jdk.internal.misc, java.lang, java.nio, and sun.nio.ch, and Topic.run failed
+            // at driver launch without them. The JVM now drives the same C client and embedded C driver
+            // as every other platform through Panama, which needs no add-opens; --enable-native-access
+            // only silences the restricted-method warning.
+            javaOptions += "--enable-native-access=ALL-UNNAMED"
+        )
+        .nativeSettings(
+            `native-settings`,
+            // The UDP round-trip and URI-validation suites bind fixed high ports, which collide if
+            // suites run concurrently. (The JS and Wasm blocks need no equivalent: they inherit the
+            // global Test/parallelExecution := false.)
+            Test / parallelExecution := false,
+            nativeConfig := {
+                val base = nativeConfig.value
+                // Scala Native compiles the C shim from a copy under scala-native/, so both the staged
+                // Aeron headers and the shim's own directory (holding kyo_aeron.h) must be on the
+                // include path. Without them kyo_aeron.c's #if __has_include(<aeronc.h>) guard is false
+                // and every function compiles out, leaving an empty .c.o and undefined symbols at link.
+                val aeronStaged = baseDirectory.value / ".." / "build" / "aeron" / "staged" / hostOsArch
+                val cSrcDir     = baseDirectory.value / ".." / "shared" / "src" / "main" / "c"
+                val aeronIncludes = Seq(
+                    s"-I${cSrcDir.absolutePath}",
+                    s"-I${(aeronStaged / "include" / "aeron").absolutePath}",
+                    s"-I${(aeronStaged / "include" / "aeronmd").absolutePath}"
+                )
+                base
+                    .withLinkingOptions(base.linkingOptions ++ ffiNativeLinkingOptions.value)
+                    .withCompileOptions(base.compileOptions ++ aeronIncludes)
+            }
+        )
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) },
             Test / jsEnv := {
                 val targetDir = target.value
                 val ffiOut    = targetDir / "ffi"
@@ -1699,15 +2170,15 @@ lazy val `kyo-net` =
                     else if (os.contains("win")) "windows"
                     else if (os.contains("linux")) "linux"
                     else os
-                val lib = ffiOut / s"libkyonet_posix_uring-$osDetect-$arch.$ext"
+                // Windows has no `lib` prefix on the shared library, matching the plugin's CCompiler output.
+                val prefix = if (os.contains("win")) "" else "lib"
+                val lib    = ffiOut / s"${prefix}kyo_aeron-$osDetect-$arch.$ext"
                 new NodeJSEnv(
                     NodeJSEnv.Config()
                         .withArgs(List("--max_old_space_size=5120"))
-                        .withEnv(Map("KYO_FFI_KYONET_POSIX_URING_PATH" -> lib.getAbsolutePath))
+                        .withEnv(Map("KYO_FFI_KYO_AERON_PATH" -> lib.getAbsolutePath))
                 )
             },
-            // Bootstrap koffi into Node's resolver. Hooked on Test / compile (not Test / test) so test,
-            // testOnly, and testQuick all trigger it, and it re-runs after a clean. Idempotent on the marker.
             Test / compile := (Test / compile).dependsOn(Def.task {
                 val log        = streams.value.log
                 val targetBase = target.value
@@ -1715,62 +2186,98 @@ lazy val `kyo-net` =
                 val marker     = nodeMods / "koffi" / "package.json"
                 val koffiRange = "^2.7" // must match kyo.ffi.internal.FfiErrors.KoffiSupportedRange
                 val pjContent =
-                    s"""{"name":"kyo-net-js-test","private":true,"dependencies":{"koffi":"$koffiRange"}}"""
+                    s"""{"name":"kyo-aeron-js-test","private":true,"dependencies":{"koffi":"$koffiRange"}}"""
                 val pj = targetBase / "package.json"
                 if (!pj.exists() || IO.read(pj) != pjContent) {
                     IO.createDirectory(targetBase)
                     IO.write(pj, pjContent)
                 }
                 if (!marker.exists()) {
-                    log.info(s"[kyo-net JS] installing koffi@$koffiRange into $targetBase ...")
+                    log.info(s"[kyo-aeron JS] installing koffi@$koffiRange into $targetBase ...")
                     val rc = scala.sys.process.Process(
-                        Seq("npm", "install", "--no-audit", "--no-fund", "--silent"),
+                        Seq(npmCommand, "install", "--no-audit", "--no-fund", "--silent"),
                         targetBase
                     ).!
                     if (rc != 0) sys.error(s"npm install koffi failed (exit $rc)")
                 }
             }).value
         )
-        .wasmSettings(`wasm-settings`)
-
-lazy val `kyo-aeron` =
-    crossProject(JVMPlatform)
-        .crossType(CrossType.Full)
-        .in(file("kyo-aeron"))
-        .dependsOn(`kyo-core`)
-        .withKyoTest
-        .settings(
-            `kyo-settings`,
-            fork := true,
-            javaOptions ++= Seq(
-                "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang=ALL-UNNAMED",
-                "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-            ),
-            libraryDependencies ++= Seq(
-                "io.aeron"     % "aeron-driver" % "1.51.0",
-                "io.aeron"     % "aeron-client" % "1.51.0",
-                "com.lihaoyi" %% "upickle"      % "4.4.3"
-            )
+        .wasmSettings(
+            `wasm-settings`,
+            // Wasm runs the same koffi-on-Node backend as JS, so the wiring mirrors .jsSettings with
+            // two differences: the Wasm backend forces ESModule, so the CommonJSModule linker line is
+            // not repeated; and this jsEnv fully replaces wasm-settings', so it re-adds
+            // --experimental-wasm-exnref, which Node needs to load the WasmGC module.
+            Test / jsEnv := {
+                val targetDir = target.value
+                val ffiOut    = targetDir / "ffi"
+                val os        = sys.props.getOrElse("os.name", "").toLowerCase
+                val ext =
+                    if (os.contains("mac")) "dylib"
+                    else if (os.contains("win")) "dll"
+                    else "so"
+                val arch =
+                    sys.props.getOrElse("os.arch", "") match {
+                        case "x86_64" | "amd64"  => "x86_64"
+                        case "aarch64" | "arm64" => "aarch64"
+                        case other               => other
+                    }
+                val osDetect =
+                    if (os.contains("mac")) "darwin"
+                    else if (os.contains("win")) "windows"
+                    else if (os.contains("linux")) "linux"
+                    else os
+                // Windows has no `lib` prefix on the shared library, matching the plugin's CCompiler output.
+                val prefix = if (os.contains("win")) "" else "lib"
+                val lib    = ffiOut / s"${prefix}kyo_aeron-$osDetect-$arch.$ext"
+                new NodeJSEnv(
+                    NodeJSEnv.Config()
+                        .withArgs(List("--max_old_space_size=5120", "--experimental-wasm-exnref"))
+                        .withEnv(Map(
+                            "KYO_FFI_KYO_AERON_PATH" -> lib.getAbsolutePath,
+                            // Wasm (ESModule) has no `require` global; KoffiFacade resolves koffi via
+                            // node:module.createRequire, which searches NODE_PATH for the bootstrapped package.
+                            "NODE_PATH" -> (target.value / "node_modules").getAbsolutePath
+                        ))
+                )
+            },
+            Test / compile := (Test / compile).dependsOn(Def.task {
+                val log        = streams.value.log
+                val targetBase = target.value
+                val nodeMods   = targetBase / "node_modules"
+                val marker     = nodeMods / "koffi" / "package.json"
+                val koffiRange = "^2.7" // must match kyo.ffi.internal.FfiErrors.KoffiSupportedRange
+                val pjContent =
+                    s"""{"name":"kyo-aeron-wasm-test","private":true,"dependencies":{"koffi":"$koffiRange"}}"""
+                val pj = targetBase / "package.json"
+                if (!pj.exists() || IO.read(pj) != pjContent) {
+                    IO.createDirectory(targetBase)
+                    IO.write(pj, pjContent)
+                }
+                if (!marker.exists()) {
+                    log.info(s"[kyo-aeron Wasm] installing koffi@$koffiRange into $targetBase ...")
+                    val rc = scala.sys.process.Process(
+                        Seq(npmCommand, "install", "--no-audit", "--no-fund", "--silent"),
+                        targetBase
+                    ).!
+                    if (rc != 0) sys.error(s"npm install koffi failed (exit $rc)")
+                }
+            }).value
         )
-        .jvmSettings(mimaCheck(false))
 
 lazy val `kyo-compiler` =
     crossProject(JVMPlatform)
         .crossType(CrossType.Full)
         .in(file("kyo-compiler"))
         .dependsOn(`kyo-core`, `kyo-aeron`, `kyo-ai` % Test)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`,
             fork := true,
-            javaOptions ++= Seq(
-                "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang=ALL-UNNAMED",
-                "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-            ),
+            // These were io.aeron's requirement, dropped with it: the pool's shared driver is now
+            // kyo-aeron's AeronDriver, the same C driver every platform runs, reached through Panama.
+            javaOptions += "--enable-native-access=ALL-UNNAMED",
             libraryDependencies ++= Seq(
                 "org.scala-lang" %% "scala3-presentation-compiler" % scalaVersion.value
             )
@@ -1782,7 +2289,8 @@ lazy val `kyo-http` =
         .crossType(CrossType.Full)
         .in(file("kyo-http"))
         .dependsOn(`kyo-core`, `kyo-config`, `kyo-schema-json`)
-        .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-system` % Test)
+        .dependsOn(`kyo-net` % "compile->compile;test->test")
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -1822,6 +2330,7 @@ lazy val `kyo-ai` =
         .crossType(CrossType.Full)
         .in(file("kyo-ai"))
         .dependsOn(`kyo-core`, `kyo-schema-json`, `kyo-http`, `kyo-actor`, `kyo-jsonrpc`, `kyo-jsonrpc-http`, `kyo-mcp`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
@@ -1858,6 +2367,7 @@ lazy val `kyo-jsonrpc` =
         .dependsOn(`kyo-core`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-system`)
         .in(file("kyo-jsonrpc"))
         .withKyoTest
         .settings(`kyo-settings`)
@@ -1892,6 +2402,7 @@ lazy val `kyo-mcp` =
         .in(file("kyo-mcp"))
         .withKyoTest
         .dependsOn(`kyo-jsonrpc`)
+        .dependsOn(`kyo-system` % Test)
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
         // Test-only dep so the JVM demo MCP servers (jvm/src/test/scala/demo) can drive
@@ -1970,28 +2481,13 @@ lazy val `kyo-zio` =
         .jvmSettings(mimaCheck(false))
         .wasmSettings(`wasm-settings`)
 
-// TODO(wasm): re-enable once cats-effect supports WASM (typelevel/cats-effect#4608).
-lazy val `kyo-cats` =
-    crossProject(JSPlatform, JVMPlatform)
-        .crossType(CrossType.Full)
-        .in(file("kyo-cats"))
-        .dependsOn(`kyo-core`)
-        .withKyoTest
-        .settings(
-            `kyo-settings`,
-            libraryDependencies += "org.typelevel" %%% "cats-effect" % catsVersion
-        )
-        .jsSettings(
-            `js-settings`
-        )
-        .jvmSettings(mimaCheck(false))
-
 lazy val `kyo-compat-future` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
         .in(file("kyo-compat/bindings/future"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             // Default compile under scala3Version so unidoc reads consistent TASTy with the rest of the build.
             // `+publish` still only emits LTS artifacts (crossScalaVersions + publish/skip guard).
@@ -2061,6 +2557,7 @@ lazy val `kyo-compat-zio` =
         .in(file("kyo-compat/bindings/zio"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             crossScalaVersions                      := List(scala3LTSVersion),
             publish / skip                          := scalaVersion.value != scala3LTSVersion,
@@ -2089,44 +2586,13 @@ lazy val `kyo-compat-zio` =
         .jvmConfigure(_.disablePlugins(KyoDoctestPlugin))
         .wasmSettings(`wasm-settings`)
 
-// TODO(wasm): re-enable with cats-effect WASM support; depends on cats-effect (see kyo-cats).
-lazy val `kyo-compat-ce` =
-    crossProject(JSPlatform, JVMPlatform)
-        .crossType(CrossType.Full)
-        .in(file("kyo-compat/bindings/ce"))
-        .settings(
-            `kyo-settings`,
-            libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
-            crossScalaVersions                      := List(scala3LTSVersion),
-            publish / skip                          := scalaVersion.value != scala3LTSVersion,
-            scalacOptions += "-Xmax-inlines:1024",
-            libraryDependencies += "org.typelevel" %%% "cats-effect" % catsVersion,
-            libraryDependencies += "co.fs2"        %%% "fs2-core"    % "3.13.0",
-            Test / unmanagedSourceDirectories += {
-                (ThisBuild / baseDirectory).value / "kyo-compat" / "test" / "shared" / "src" / "test" / "scala"
-            },
-            Test / unmanagedSourceDirectories += {
-                (ThisBuild / baseDirectory).value / "kyo-compat" / "test-streams" / "shared" / "src" / "test" / "scala"
-            }
-        )
-        .jsSettings(`js-settings`)
-        .jvmSettings(
-            mimaCheck(false),
-            Test / unmanagedSourceDirectories += {
-                (ThisBuild / baseDirectory).value / "kyo-compat" / "test" / "jvm" / "src" / "test" / "scala"
-            },
-            Test / unmanagedSourceDirectories += {
-                (ThisBuild / baseDirectory).value / "kyo-compat" / "test-streams" / "jvm" / "src" / "test" / "scala"
-            }
-        )
-        .jvmConfigure(_.disablePlugins(KyoDoctestPlugin))
-
 lazy val `kyo-compat-ox` =
     crossProject(JVMPlatform)
         .crossType(CrossType.Full)
         .in(file("kyo-compat/bindings/ox"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             crossScalaVersions                      := List(scala3LTSVersion),
             publish / skip                          := scalaVersion.value != scala3LTSVersion,
@@ -2156,6 +2622,7 @@ lazy val `kyo-compat-twitter-future` =
         .in(file("kyo-compat/bindings/twitter-future"))
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %%% "scalatest" % scalaTestVersion % Test,
             crossScalaVersions                      := List(scala3LTSVersion),
             publish / skip                          := scalaVersion.value != scala3LTSVersion,
@@ -2191,6 +2658,7 @@ lazy val `kyo-compat-tests` =
         .disablePlugins(KyoDoctestPlugin)
         .settings(
             `kyo-settings`,
+            release17,
             libraryDependencies += "org.scalatest" %% "scalatest" % scalaTestVersion % Test,
             scalaVersion                           := scala3LTSVersion,
             crossScalaVersions                     := List(scala3LTSVersion),
@@ -2235,6 +2703,7 @@ lazy val `kyo-pod` =
         .crossType(CrossType.Full)
         .in(file("kyo-pod"))
         .dependsOn(`kyo-core`, `kyo-http`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2273,9 +2742,13 @@ lazy val `kyo-pod` =
                     // (single-fork, no marker) are deliberately not matched (the trailing `s` distinguishes them).
                     val simpleName = test.name.split('.').last
                     val srcOpt     = testSrcDirs.flatMap(d => (d ** s"$simpleName.scala").get).headOption
+                    // Match actual CALLS to the marker-registering helpers (helper name immediately followed by `{` or `(`),
+                    // not mere textual mentions. A suite's scaladoc can reference `runBackends` (ContainerOrchestrationItTest
+                    // points readers at ContainerItTest) while the suite itself only uses the single-fork `runBackend`; a plain
+                    // `contains` check then forks that http-only suite per runtime and runs it twice against one daemon.
+                    val runtimeHelperCall = """\b(runBackendsLong|runBackends|runRuntimes)\s*[{(]""".r
                     val usesRuntimeMarkers = srcOpt.exists { f =>
-                        val src = IO.read(f)
-                        src.contains("runBackends") || src.contains("runRuntimes")
+                        runtimeHelperCall.findFirstIn(IO.read(f)).isDefined
                     }
                     val targetRuntimes = if (usesRuntimeMarkers) Seq("podman", "docker") else Seq.empty
                     if (targetRuntimes.isEmpty)
@@ -2337,6 +2810,7 @@ lazy val `kyo-browser` =
         .crossType(CrossType.Full)
         .in(file("kyo-browser"))
         .dependsOn(`kyo-http`, `kyo-jsonrpc`, `kyo-jsonrpc-http`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2405,6 +2879,7 @@ lazy val `kyo-slack` =
         .crossType(CrossType.Full)
         .in(file("kyo-slack"))
         .dependsOn(`kyo-http`, `kyo-schema-json`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2440,12 +2915,26 @@ lazy val `kyo-markdown` =
         )
         .wasmSettings(`wasm-settings`)
 
+lazy val `kyo-i18n` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .in(file("kyo-i18n"))
+        .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        .nativeSettings(`native-settings`)
+        .jsSettings(`js-settings`)
+        .wasmSettings(`wasm-settings`)
+
 lazy val `kyo-ui` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
         .in(file("kyo-ui"))
         .dependsOn(`kyo-core`, `kyo-http`)
         .dependsOn(`kyo-browser` % Test)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2506,6 +2995,7 @@ lazy val `kyo-website` =
         .in(file("kyo-website"))
         .dependsOn(`kyo-ui`)
         .dependsOn(`kyo-parse`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .settings(publish / skip := true)
@@ -2551,6 +3041,7 @@ lazy val `kyo-examples` =
         .crossType(CrossType.Full)
         .in(file("kyo-examples"))
         .dependsOn(`kyo-http`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-direct`)
         .dependsOn(`kyo-core`)
@@ -2582,7 +3073,6 @@ lazy val `kyo-bench` =
         .dependsOn(`kyo-stm`)
         .dependsOn(`kyo-direct`)
         .dependsOn(`kyo-scheduler-zio`)
-        .dependsOn(`kyo-scheduler-cats`)
         .disablePlugins(MimaPlugin)
         .jvmConfigure(_.disablePlugins(KyoDoctestPlugin))
         .settings(
@@ -2648,6 +3138,7 @@ lazy val `kyo-doctest` =
         .crossType(CrossType.Full)
         .in(file("kyo-doctest"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-parse`)
         .dependsOn(`kyo-direct` % Test)
@@ -2671,7 +3162,6 @@ lazy val `root-readme` =
             `kyo-direct`.jvm,
             `kyo-bench`.jvm,
             `kyo-zio`.jvm,
-            `kyo-cats`.jvm,
             `kyo-caliban`.jvm,
             `kyo-combinators`.jvm
         )
@@ -2733,16 +3223,23 @@ def readFfiNativeManifest(cp: Seq[Attributed[File]], relDir: Seq[String]): Seq[S
         if (dir.isDirectory) (dir * "*.flags").get.flatMap(IO.readLines(_)) else Seq.empty[String]
     }.map(_.trim).filter(_.nonEmpty).distinct
 
-lazy val `native-settings` = Seq(
+// Everything a Native row needs that does not assume the project is itself a Scala Native module, so
+// the kyoNative aggregate (which has no native sources, hence no Test / nativeLink to transform) can
+// take these without the per-module link hook below.
+lazy val `native-settings-base` = Seq(
     fork                                              := false,
     bspEnabled                                        := false,
     Test / testForkedParallel                         := false,
     Test / envVars += "SCALANATIVE_THREAD_STACK_SIZE" -> "33554432",
     libraryDependencies += "io.github.cquiroz"       %%% "scala-java-time" % "2.7.0",
-    // A dependency's nativeBundled FFI C (kyo-net's kyo_uring.c and TLS shims) is compiled into THIS Native binary
-    // (Scala Native scans every scala-native dir on the classpath), but nativeConfig does not propagate across a
-    // project dependency; so fold each dependency's plugin-written FFI compile/link flags off the classpath, else the
-    // link fails (SSL_CTX_ctrl macro / undefined io_uring_*). A module owning its FFI flags wires them directly.
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
+    // A dependency's bundled FFI C (kyo-net's kyo_uring.c and TLS shims) compiles into THIS Native binary, but
+    // nativeConfig does not propagate across a project dependency, so fold each dep's FFI compile/link flags in
+    // here or the link fails (SSL_CTX_ctrl macro / undefined io_uring_*).
     nativeConfig := {
         val base         = nativeConfig.value
         val cp           = (Compile / dependencyClasspath).value
@@ -2753,6 +3250,34 @@ lazy val `native-settings` = Seq(
     }
 )
 
+lazy val `native-settings` = `native-settings-base` ++ Seq(
+    // Drop this module's Scala Native work directory the moment its test binary links. Scala Native
+    // keeps <target>/native-test (IR, objects, unpacked native libraries: 526MB of kyo-core's 665MB
+    // workspace) so a LATER invocation can relink incrementally, and the ~13GB the ~40 modules of a
+    // Native row accumulate is what carries the row's peak past the free disk of a runner image that
+    // started small, killing the runner mid-link with no log at all.
+    //
+    // Everything except `build-checksum` goes. That file and the linked binary (which sits one level
+    // up, outside the work directory) are the entire input to Scala Native's "Build skipped" check, so
+    // a repeat link still short-circuits; dropping the rest wholesale is what keeps the directory
+    // self-consistent. Deleting only `generated/` did not: it left `package2hash`, the incremental
+    // codegen state naming those IR files, behind. A later link that missed the checksum (CI relinks a
+    // module whenever the test phase recompiles one of its dependencies) then trusted that state,
+    // skipped regenerating every unit whose NIR was unchanged, and handed clang object paths for files
+    // nobody had written. Codegen and compilation both reported success and the link died on missing
+    // .ll.o with no diagnostic. See issue #1821.
+    //
+    // Reads the environment rather than insideCI because a value transform sees no other settings; a
+    // local build keeps its intermediates for the next incremental link.
+    Test / nativeLink ~= { binary =>
+        if (sys.env.contains("CI")) {
+            val workDir = binary.getParentFile / "native-test"
+            IO.listFiles(workDir).filterNot(_.getName == "build-checksum").foreach(IO.delete)
+        }
+        binary
+    }
+)
+
 lazy val `js-settings` = Seq(
     Compile / doc / sources                     := Seq.empty,
     fork                                        := false,
@@ -2760,6 +3285,11 @@ lazy val `js-settings` = Seq(
     Test / parallelExecution                    := false,
     jsEnv                                       := new NodeJSEnv(NodeJSEnv.Config().withArgs(List("--max_old_space_size=5120"))),
     libraryDependencies += "io.github.cquiroz" %%% "scala-java-time" % "2.7.0",
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
     // CI links every module's test binary in one sbt process; retaining each module's incremental
     // linker state overflows the 12G sbt heap now that the schema family links per-format
     // binaries. Batch mode drops that state after each link: incremental relink speed is
@@ -2788,6 +3318,11 @@ lazy val `wasm-settings` = Seq(
         ))
     ),
     libraryDependencies += "io.github.cquiroz" %%% "scala-java-time" % "2.7.0",
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
     // Same CI heap rationale as `js-settings`: the WASM rows are Scala.js links too.
     scalaJSLinkerConfig := {
         val c = scalaJSLinkerConfig.value
@@ -2830,7 +3365,11 @@ lazy val `kyo-doctest-plugin` = (project in file("kyo-doctest/plugin"))
             "-Xmx1024M",
             "-Dplugin.version=" + version.value,
             // Path to the runner-classpath file written by scriptedDependencies below.
-            "-Dkyo.doctest.runnerCpFile=" + (target.value / "doctest-runner-cp.txt").getAbsolutePath
+            "-Dkyo.doctest.runnerCpFile=" + (target.value / "doctest-runner-cp.txt").getAbsolutePath,
+            // The sub-builds compile against the same Scala the runner classpath was built with.
+            // Pinning it here rather than in each build.sbt keeps the two from drifting apart, which
+            // breaks with a NoSuchMethodError once the two versions disagree on the standard library.
+            "-Dkyo.doctest.scalaVersion=" + scala3Version
         ),
         scriptedBufferLog := false,
         // Provide the kyo-doctest runner's built classpath to the scripted forks without ivy
@@ -2847,7 +3386,16 @@ lazy val `kyo-doctest-plugin` = (project in file("kyo-doctest/plugin"))
         },
         // Run the scripted suite as part of the plugin's regular test task so CI gates it via
         // `kyo-doctest-plugin/test` rather than a bespoke scripted invocation.
-        Test / test := (Test / test).dependsOn(scripted.toTask("")).value
+        Test / test := (Test / test).dependsOn(Def.taskDyn {
+            // Skipped on Windows: sbt's scripted framework boots a nested sbt whose Win32 named-pipe
+            // boot-server lock flakily fails to create (error 1336), failing the batch reload before
+            // any test runs (sbt/sbt#6777). This plugin's behavior is platform-independent and is
+            // fully exercised on Linux/macOS.
+            if (sys.props.getOrElse("os.name", "").toLowerCase.contains("win"))
+                Def.task(streams.value.log.info("scripted skipped on Windows (sbt#6777 boot-server named-pipe flake)"))
+            else
+                Def.task((scripted.toTask("")).value)
+        }).value
     )
 
 // --- kyo-compat-plugin (in-tree sbt plugin; published as artifact `kyo-compat-plugin`)
@@ -2871,9 +3419,18 @@ lazy val `kyo-compat-plugin` = (project in file("kyo-compat/plugin"))
         // platform-deps shim. Pinned to the same versions as kyo's own
         // project/plugins.sbt so the runtime sbt classloader resolves
         // exactly one copy of each.
+        //
+        // sbt-scalajs and sbt-scala-native are pinned here even though this project
+        // never calls them: the two crossproject plugins each declare a compile-scope
+        // dependency on an ancient default (0.6.23 and 0.3.7) that was published only
+        // to the sbt and Typesafe ivy repos, never to Maven Central. Without these
+        // pins winning conflict resolution, resolving this project reaches those two
+        // hosts, and any runner that cannot reach them fails the build.
         addSbtPlugin("com.eed3si9n"       % "sbt-projectmatrix"             % "0.11.0"),
         addSbtPlugin("org.portable-scala" % "sbt-scalajs-crossproject"      % "1.3.2"),
         addSbtPlugin("org.portable-scala" % "sbt-scala-native-crossproject" % "1.3.2"),
+        addSbtPlugin("org.scala-js"       % "sbt-scalajs"                   % "1.22.0"),
+        addSbtPlugin("org.scala-native"   % "sbt-scala-native"              % "0.5.12"),
         scriptedLaunchOpts := Seq(
             "-Xmx1024M",
             "-Dplugin.version=" + version.value
@@ -2881,7 +3438,47 @@ lazy val `kyo-compat-plugin` = (project in file("kyo-compat/plugin"))
         scriptedBufferLog := false,
         // Run the scripted suite as part of the plugin's regular test task (matches
         // kyo-doctest-plugin) so the testKyo 2.12 pass gates it; no bespoke CI step.
-        Test / test := (Test / test).dependsOn(scripted.toTask("")).value
+        Test / test := (Test / test).dependsOn(Def.taskDyn {
+            // Skipped on Windows: sbt's scripted framework boots a nested sbt whose Win32 named-pipe
+            // boot-server lock flakily fails to create (error 1336), failing the batch reload before
+            // any test runs (sbt/sbt#6777). This plugin's behavior is platform-independent and is
+            // fully exercised on Linux/macOS.
+            if (sys.props.getOrElse("os.name", "").toLowerCase.contains("win"))
+                Def.task(streams.value.log.info("scripted skipped on Windows (sbt#6777 boot-server named-pipe flake)"))
+            else
+                Def.task((scripted.toTask("")).value)
+        }).value,
+        // Bundle the cross-binding conformance suite (kyo-compat/test + test-streams)
+        // into the plugin jar as resources, plus an INDEX, so an external binding can
+        // pull it in via `.compatConformance`. Copied verbatim from the canonical suite
+        // the in-repo bindings compile against, so the bundle stays byte-identical.
+        Compile / resourceGenerators += Def.task {
+            val outDir  = (Compile / resourceManaged).value / "kyo-compat-testkit"
+            val suites  = Seq("test" -> "test", "test-streams" -> "streams")
+            val buckets = Seq("shared", "jvm", "js", "native")
+            val base    = (ThisBuild / baseDirectory).value / "kyo-compat"
+            IO.delete(outDir)
+            val index     = scala.collection.mutable.ArrayBuffer.empty[String]
+            val generated = scala.collection.mutable.ArrayBuffer.empty[File]
+            for {
+                (suiteDir, suiteTag) <- suites
+                bucket               <- buckets
+                root = base / suiteDir / bucket / "src" / "test" / "scala"
+                if root.exists
+                src <- (root ** "*.scala").get
+            } {
+                val rel   = root.toPath.relativize(src.toPath).toString.replace('\\', '/')
+                val scope = s"$suiteTag-$bucket"
+                val dest  = outDir / scope / rel
+                IO.copyFile(src, dest)
+                index += s"$scope\t$rel"
+                generated += dest
+            }
+            val indexFile = outDir / "INDEX"
+            IO.write(indexFile, index.sorted.mkString("\n") + "\n")
+            generated += indexFile
+            generated.toSeq
+        }.taskValue
     )
 
 // ===========================================================================
